[gd_scene load_steps=4 format=3 uid="uid://gbydeo7n4xba"]

[ext_resource type="Script" uid="uid://bsby8cure2bov" path="res://scripts/jeser.gd" id="1_bk6qm"]
[ext_resource type="Texture2D" uid="uid://rhdxtjk0xuh1" path="res://assets/Drawing-9.sketchpad.png" id="2_bk6qm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bk6qm"]
size = Vector2(24, 239.5)

[node name="jeser" type="Node2D"]
script = ExtResource("1_bk6qm")

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
amount = 30
texture = ExtResource("2_bk6qm")
lifetime = 0.8
speed_scale = 1.8
randomness = 1.0
lifetime_randomness = 0.35
emission_shape = 3
emission_rect_extents = Vector2(10, 10)
direction = Vector2(0, 1)
spread = 180.0
gravity = Vector2(0, -980)
initial_velocity_max = 50.0

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
scale = Vector2(4.3125, 5.34273)
polygon = PackedVector2Array(-10, 5, -5, -1, 5, -1, 10, 5)

[node name="Polygon2D" type="Polygon2D" parent="StaticBody2D"]
scale = Vector2(4.325, 5.5)
color = Color(0.192157, 0.160784, 0.188235, 1)
polygon = PackedVector2Array(-5, -1, 5, -1, 10, 5, -10, 5)

[node name="Timer" type="Timer" parent="."]
wait_time = 3.5
autostart = true

[node name="Area Player" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area Player"]
position = Vector2(0, -113.75)
shape = SubResource("RectangleShape2D_bk6qm")

[node name="Area_rock" type="Area2D" parent="."]
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area_rock"]
position = Vector2(1, -113.75)
shape = SubResource("RectangleShape2D_bk6qm")

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.5

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="Area Player" to="." method="_on_area_player_body_entered"]
[connection signal="body_exited" from="Area Player" to="." method="_on_area_player_body_exited"]
[connection signal="body_entered" from="Area_rock" to="." method="_on_area_rock_body_entered"]
[connection signal="body_exited" from="Area_rock" to="." method="_on_area_rock_body_exited"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
